版本变更功能

--- a/ChangLong/Base.lproj/Main.storyboard
+++ b/ChangLong/Base.lproj/Main.storyboard
@@ -375,11 +375,11 @@
                                         <action selector="searchClick:" destination="iH9-zo-u8h" eventType="touchUpInside" id="JTe-n1-KCK"/>
                                     </connections>
                                 </button>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="GcP-WS-RiH">
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请输入使用商品或服务项目" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="GcP-WS-RiH">
                                     <rect key="frame" x="8" y="4" width="516" height="44"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="textColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                             </subviews>
@@ -1470,39 +1470,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wDj-al-qSi">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wDj-al-qSi">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="80" id="uiP-XN-17I">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uiP-XN-17I" id="l3X-Bb-8UE">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4cg-nD-AX6">
-                                                    <rect key="frame" x="8" y="0.0" width="584" height="21"/>
+                                                <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Yc-qu-uMS">
+                                                    <rect key="frame" x="8" y="13" width="584" height="59"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gr-3j-TXz">
+                                                            <rect key="frame" x="81" y="6" width="495" height="46"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4cg-nD-AX6">
+                                                            <rect key="frame" x="8" y="6" width="81" height="46"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="81" id="S86-a3-71s"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="50J-PV-Poi"/>
+                                                        <constraint firstAttribute="trailing" secondItem="5gr-3j-TXz" secondAttribute="trailing" constant="8" id="D1u-SB-Em0"/>
+                                                        <constraint firstItem="4cg-nD-AX6" firstAttribute="leading" secondItem="0Yc-qu-uMS" secondAttribute="leading" constant="8" id="Odi-oB-Gs5"/>
+                                                        <constraint firstAttribute="bottom" secondItem="5gr-3j-TXz" secondAttribute="bottom" constant="7" id="SJh-7g-TdO"/>
+                                                        <constraint firstItem="5gr-3j-TXz" firstAttribute="leading" secondItem="0Yc-qu-uMS" secondAttribute="leading" constant="81" id="VXq-M9-GNn"/>
+                                                        <constraint firstItem="5gr-3j-TXz" firstAttribute="top" secondItem="0Yc-qu-uMS" secondAttribute="top" constant="6" id="YGp-y1-akw"/>
+                                                        <constraint firstItem="4cg-nD-AX6" firstAttribute="top" secondItem="0Yc-qu-uMS" secondAttribute="top" constant="6" id="cuc-EV-nZ7"/>
+                                                        <constraint firstAttribute="bottom" secondItem="4cg-nD-AX6" secondAttribute="bottom" constant="7" id="qhC-UA-Zbf"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gr-3j-TXz">
-                                                    <rect key="frame" x="8" y="21" width="584" height="58"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="5gr-3j-TXz" firstAttribute="leading" secondItem="l3X-Bb-8UE" secondAttribute="leadingMargin" id="E8g-Xx-snJ"/>
-                                                <constraint firstItem="5gr-3j-TXz" firstAttribute="top" secondItem="4cg-nD-AX6" secondAttribute="bottom" id="FEn-75-AJL"/>
-                                                <constraint firstItem="4cg-nD-AX6" firstAttribute="trailing" secondItem="l3X-Bb-8UE" secondAttribute="trailingMargin" id="Tph-s6-Lh2"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="5gr-3j-TXz" secondAttribute="bottom" constant="-8" id="XMd-De-VEg"/>
-                                                <constraint firstItem="4cg-nD-AX6" firstAttribute="leading" secondItem="l3X-Bb-8UE" secondAttribute="leadingMargin" id="jPi-1h-AGm"/>
-                                                <constraint firstItem="4cg-nD-AX6" firstAttribute="top" secondItem="l3X-Bb-8UE" secondAttribute="topMargin" constant="-8" id="lDZ-CF-1eq"/>
-                                                <constraint firstItem="5gr-3j-TXz" firstAttribute="trailing" secondItem="l3X-Bb-8UE" secondAttribute="trailingMargin" id="pun-rS-XvH"/>
+                                                <constraint firstItem="0Yc-qu-uMS" firstAttribute="top" secondItem="l3X-Bb-8UE" secondAttribute="topMargin" constant="5" id="31H-hG-c5i"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="0Yc-qu-uMS" secondAttribute="trailing" id="GOX-SY-myM"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0Yc-qu-uMS" secondAttribute="bottom" id="WPy-43-LXj"/>
+                                                <constraint firstItem="0Yc-qu-uMS" firstAttribute="leading" secondItem="l3X-Bb-8UE" secondAttribute="leadingMargin" id="nkk-hk-Hpz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
