--- a/ChangLong/Base.lproj/Main.storyboard
+++ b/ChangLong/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入账号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6Sf-18-I07">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入要注册的手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6Sf-18-I07">
                                 <rect key="frame" x="30" y="20" width="540" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kV9-ZH-m9i"/>
